--- a/integration.yml
+++ b/integration.yml
@@ -18,6 +18,6 @@ stages:
         -p:EnableCompressionInSingleFile=true \
         -p:PublishSingleFile=true \
         -p:PublishReadyToRun=true \
-        -p:DebugType=true
+        -p:DebugType=embedded
       displayName: Publish .Net Console Project
 
