--- a/integration.yml
+++ b/integration.yml
@@ -20,4 +20,7 @@ stages:
         -p:PublishReadyToRun=true \
         -p:DebugType=embedded
       displayName: Publish .Net Console Project
+    - publish: out/Contoso.Spaces.Console.exe
+      displayName: Upload console app artifact
+      artifact: console-app  
 
