--- a/integration.yml
+++ b/integration.yml
@@ -22,5 +22,12 @@ stages:
       displayName: Publish .Net Console Project
     - publish: out/Contoso.Spaces.Console.exe
       displayName: Upload console app artifact
-      artifact: console-app  
-
+      artifact: console-app
+    - script: |
+        dotnet pack \
+        --output pkg \
+        -p:Version=1.0.0 \
+      displayname: Package dotnet tool
+    - publish: pkg/Contoso.Spaces.Console.1.0.0.nupkg
+      displayname: Upload package artifact
+      artifact: nuget-package
