--- a/integration.yml
+++ b/integration.yml
@@ -26,7 +26,7 @@ stages:
     - script: |
         dotnet pack \
         --output pkg \
-        -p:Version=1.0.0 \
+        -p:Version=1.0.0
       displayname: Package dotnet tool
     - publish: pkg/Contoso.Spaces.Console.1.0.0.nupkg
       displayname: Upload package artifact
